# PromptLog

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: docs.html
examples/: basic_decorator.py  multi_agent.py  test_anthropic_sdk.py  test_autogen.py  test_google_sdk.py  test_langchain.py  test_openai_sdk.py
promptlog/: __init__.py  cli.py  config.py  schema.py  store.py  tracker.py
promptlog/ui/: __init__.py  server.py
promptlog/ui/static/: index.html
tests/: test_schema.py  test_store.py  test_tracker.py
