[project]
name = "promptlog"
version = "0.1.0"
description = "A lightweight, framework-agnostic prompt tracking library for LLM projects — automatic logging, versioning, and run comparison."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sujith Kamme", email = "kammesujith27@gmail.com" }
]
keywords = [
    "llm",
    "prompt",
    "tracking",
    "logging",
    "mlops",
    "llmops",
    "promptops",
    "agents",
    "experiment",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.3.2",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "uvicorn>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/sujith-kamme/PromptLog"
Repository = "https://github.com/sujith-kamme/PromptLog"
Issues = "https://github.com/sujith-kamme/PromptLog/issues"

[project.scripts]
promptlog = "promptlog.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]        # errors, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]